# stand-control-bot

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  justfile  package-lock.json  package.json
.github/workflows/: check.yml
.sqlx/: query-3dc4af5df765ae7878575198d2554c2d9b1f169a8682508ce7a0ba19d60cadfc.json  query-3df10fc5ae0f02644057b37bd1238ad341e0bbd966dc409436b9fb939f624e90.json  query-4e12f7a0bbd4bf8c9d8a09b8b45f8921a353fe576e6b583e3dfde04596ea3d2f.json  query-521ee54fdbf70d04a6e95d0a6effaeee299ea063c751595eacc8468f0cbbd245.json  query-653eda57cd20412a17a31e53d609a51986350840a815c158c7bf96888eda3305.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-9717112918e015b253e02815df7decbc5ea310f6efb52bb548122b98f3f71a35.json  query-9f0a868024832a27eb3c74ec901f1d19c713a88c1d3007a502ef14a71e9384bf.json  query-b3761780a2e1aff848bcef788b4ee90fe3b6d39ebe1051a05f3dbec71ee6a1d3.json  query-d65be7e3814116cf65a3f965b7f4ad55edd22211def2d76807f52a699a3b7af4.json  query-d680b69cdbf11c43892e436888e9ff030d9d11ee89a15562aa9bc52dba958c5d.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json  query-fa1e9eb9000fde1c1ca27c459382cebabac109a09d98cfc43e0a9bff30e94c42.json
assets/: tailwindcss.css
configuration/: base.toml  local.toml  production.toml
ldap/: config.ldif  init.ldif  overlay.ldif  refint.ldif  user.ldif
migrations/: 20240401005014_init.sql  20240901110657_groups.sql  20250402133105_ad_fields.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/bot/: handlers.rs  mod.rs
src/db/: mod.rs  models.rs
src/dialogues/: hello.rs  link_account.rs  mod.rs
src/ldap/: mod.rs
src/logic/: groups.rs  hosts.rs  message_senders.rs  mod.rs  notifications.rs  release.rs  users.rs
src/web/: hosts.rs  mod.rs  templates.rs
src/web/auth/: login.rs  middleware.rs  mod.rs
tailwind_src/: input.css
templates/: all_hosts.html  available_hosts.html  base.html  dialogue.html  hosts_lease.html  hosts_page_base.html  index.html  login.html
tests/: api.rs  hosts.rs  notifications.rs
tests/db/: helpers.rs  main.rs
tests/support/: app.rs  gen.rs  generator.rs  mod.rs  registry.rs
