[package]
name = "stand-control-bot"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/goDeni/stand-control-bot"
default-run = "stand-control-bot"

[dependencies]
anyhow = "1.0.81"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.37", default-features = false, features = [
    "now",
    "serde",
] }
config = { version = "0.14" }
dotenv = "0.15.0"
hyper = "1.2.0"
ipnetwork = "0.20.0"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = { version = "4" }
teloxide = { version = "0.12.2", features = ["macros"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = '0.1'
uuid = { version = "1.3", features = ["v4"] }

[dependencies.stated_dialogues]
git = "https://github.com/goDeni/stated_dialogues.git"
branch = "main"
features = ["teloxide-adapter"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["registry", "env-filter", "fmt"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio-rustls",
    "ipnetwork",
]

[dev-dependencies]
fake = "2"
reqwest = { version = "0.12", features = ["cookies"] }
tokio = { version = "1", features = ["rt", "macros"] }
uuid = { version = "1.3", features = ["v4", "serde"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-musl"]
# Publish jobs to run in CI
pr-run-mode = "plan"
