[package]
name = "stand-control-bot"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/goDeni/stand-control-bot"
default-run = "stand-control-bot"

[dependencies]
anyhow = "1.0.81"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["macros"] }
axum-flash = "0.8.0"
axum-login = "0.15.1"
chrono = { version = "0.4.37", default-features = false, features = [
    "now",
    "serde",
] }
config = { version = "0.14" }
dotenv = "0.15.0"
hyper = "1.2.0"
ipnetwork = "0.20.0"
ldap3 = "0.11.3"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = { version = "4" }
teloxide = { version = "0.12.2", features = ["macros"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tower-sessions = "0.12.2"
tracing = '0.1'
uuid = { version = "1.3", features = ["v4"] }

[dependencies.axum-extra]
version = "0.9"
features = ["cookie", "cookie-signed", "cookie-key-expansion", "form", "query"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["registry", "env-filter", "fmt"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio-rustls",
    "ipnetwork",
]

[dev-dependencies]
async_cell = "0.2.2"
fake = "2"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["cookies"] }
tokio = { version = "1", features = ["rt", "macros"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
serde_json = { version = "1" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
