[package]
name = "tachikoma"
version = "0.3.1"
edition = "2024"
repository = "https://github.com/udv-group/tachikoma"
default-run = "tachikoma"

[dependencies]
anyhow = "^1.0"
askama = { version = "0.14" }
async-trait = "0.1.80"
axum = { version = "0.7", features = ["macros"] }
axum-flash = "0.8.0" # blocks update of axum and related crates
axum-login = "0.16"
chrono = { version = "0.4.37", default-features = false, features = [
    "now",
    "serde",
] }
config = { version = "^0.15" }
dotenv = "0.15.0"
hyper = "1.6.0"
ipnetwork = { version = "0.21", features = ["serde"] }
itertools = "0.14.0"
ldap3 = "^0.11"
md-5 = "0.10.6"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = { version = "4" }
teloxide = { version = "0.15", features = ["macros"] }
thiserror = "^2.0"
tokio = { version = "^1.44", features = ["rt-multi-thread", "macros"] }
tower = "^0.5"
tower-http = { version = "0.6.2", features = ["trace"] }
tower-sessions = "0.13"
tracing = '^0.1'
uuid = { version = "^1.16", features = ["v4"] }

[dependencies.axum-extra]
version = "0.9"
features = ["cookie", "cookie-signed", "cookie-key-expansion", "form", "query"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["registry", "env-filter", "fmt"]

[dependencies.sqlx]
version = "^0.8"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio-rustls",
    "ipnetwork",
]

[dev-dependencies]
async_cell = "0.2.2"
fake = "4"
rand = "0.9"
reqwest = { version = "0.12", features = ["cookies"] }
tokio = { version = "1", features = ["rt", "macros"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
serde_json = { version = "1" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
